<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.storyapp.dashboard.SettingsFragment">

    <Button
        android:id="@+id/btnLightMode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/light_mode"
        android:layout_margin="10dp"
        android:background="@drawable/button_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/btnDarkMode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"
        android:text="@string/dark_mode"
        android:layout_margin="10dp"
        android:background="@drawable/button_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLightMode"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/text_log_out"
        android:layout_margin="10dp"
        android:background="@drawable/button_custom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDarkMode"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>