<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.storyapp.authentication.SignUpForm">

    <ImageView
        android:id="@+id/imageSignup"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@drawable/login" />

    <TextView
        android:id="@+id/titleSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/title_signup"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSignup"
        app:layout_constraintVertical_bias="0.036"
        android:alpha="0"
        tools:alpha="1"/>

    <TextView
        android:id="@+id/nameSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/titleSignup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.011"
        tools:layout_editor_absoluteX="-16dp"
        android:alpha="0"
        tools:alpha="1"/>

    <com.example.storyapp.customview.MyEditClear
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:hint="@string/name"
        android:background="@drawable/input_custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSignup"
        android:alpha="0"
        tools:alpha="1">
    </com.example.storyapp.customview.MyEditClear>

    <TextView
        android:id="@+id/emailSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintVertical_bias="0.011"
        tools:layout_editor_absoluteX="-16dp"
        android:alpha="0"
        tools:alpha="1"/>

    <com.example.storyapp.customview.MyEditEmail
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:hint="@string/email"
        android:background="@drawable/input_custom"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignup"
        android:alpha="0"
        tools:alpha="1"/>

    <TextView
        android:id="@+id/passwordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.011"
        tools:layout_editor_absoluteX="-16dp"
        android:alpha="0"
        tools:alpha="1"/>

    <com.example.storyapp.customview.MyEditPassword
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:background="@drawable/input_custom"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        app:passwordToggleEnabled = "true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignup"
        android:alpha="0"
        tools:alpha="1">
    </com.example.storyapp.customview.MyEditPassword>

    <Button
        android:id="@+id/btnSignupForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_up"
        android:background="@drawable/button_custom"
        app:backgroundTint="@null"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:alpha="0"
        tools:alpha="1"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>